<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_18"
        android:layout_marginLeft="@dimen/dp_18"
        android:layout_marginTop="@dimen/margin_double"
        android:text="@string/name"
        android:textColor="@color/color91"
        android:textSize="@dimen/text_11"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_standard"
        android:layout_marginRight="@dimen/margin_standard"
        android:maxLength="50"
        android:backgroundTint="@color/color_4c"
        android:inputType="textPersonName"
        android:textColor="@color/color_4c"
        android:textSize="@dimen/text_14"
        app:layout_constraintTop_toBottomOf="@id/tvName" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/errorName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etName"
        android:textSize="@dimen/text_9"
        android:textColor="@color/colorRed"
        android:layout_marginRight="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_standard"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_18"
        android:layout_marginLeft="@dimen/dp_18"
        android:maxLength="50"
        android:layout_marginTop="@dimen/margin_standard"
        android:text="@string/email"
        android:textColor="@color/color91"
        android:textSize="@dimen/text_11"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etName" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_standard"
        android:layout_marginRight="@dimen/margin_standard"
        android:backgroundTint="@color/color_4c"
        android:inputType="textEmailAddress"
        android:textColor="@color/color_4c"
        android:textSize="@dimen/text_14"
        app:layout_constraintTop_toBottomOf="@id/tvEmail" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/errorEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        android:textSize="@dimen/text_9"
        android:textColor="@color/colorRed"
        android:layout_marginRight="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_standard"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_18"
        android:layout_marginLeft="@dimen/dp_18"
        android:layout_marginTop="@dimen/margin_half"
        android:text="@string/gender"
        android:textColor="@color/color91"
        android:textSize="@dimen/text_11"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etEmail" />

    <RadioGroup
        android:id="@+id/rgGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_double"
        android:layout_marginLeft="@dimen/margin_double"
        android:layout_marginTop="@dimen/margin_half"
        android:layout_marginEnd="@dimen/dp_18"
        android:layout_marginRight="@dimen/dp_18"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvGender">

        <RadioButton
            android:id="@+id/rbMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:checked="true"
            android:textColor="@color/color_4c"
            android:textSize="@dimen/text_14" />

        <RadioButton
            android:id="@+id/rbFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textColor="@color/color_4c"
            android:textSize="@dimen/text_14" />
    </RadioGroup>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_18"
        android:layout_marginLeft="@dimen/dp_18"
        android:layout_marginTop="@dimen/margin_standard"
        android:text="@string/country"
        android:textColor="@color/color91"
        android:textSize="@dimen/text_11"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rgGender" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinnerCountry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_half"
        android:layout_marginRight="@dimen/margin_standard"
        android:backgroundTint="@color/color_4c"
        android:entries="@array/countries_array"
        app:layout_constraintTop_toBottomOf="@id/tvCountry" />

    <View
        android:id="@+id/viewCountry"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_1"
        android:layout_marginLeft="@dimen/dp_18"
        android:layout_marginTop="@dimen/margin_half"
        android:layout_marginRight="@dimen/dp_18"
        android:background="@color/color_4c"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinnerCountry" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_18"
        android:layout_marginLeft="@dimen/dp_18"
        android:layout_marginTop="@dimen/margin_standard"
        android:text="@string/city"
        android:textColor="@color/color91"
        android:textSize="@dimen/text_11"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewCountry" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinnerCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_half"
        android:layout_marginRight="@dimen/margin_standard"
        android:backgroundTint="@color/color_4c"
        android:entries="@array/cities_india_array"
        app:layout_constraintTop_toBottomOf="@id/tvCity" />

    <View
        android:id="@+id/viewCity"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_1"
        android:layout_marginLeft="@dimen/dp_18"
        android:layout_marginTop="@dimen/margin_half"
        android:layout_marginRight="@dimen/dp_18"
        android:background="@color/color_4c"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinnerCity" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/buttonSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_double"
        android:text="@string/submit"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/text_17"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>